[package]
name = "libfdisk"
version = "0.1.4"
authors = ["Jean Bouchard <jeanbouch418@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/hommeabeil/libfdisk-rs"
description = "Rust wrappers for libfdisk"

[dependencies]
libc = "0.2"
error-chain = { version = "0.12", default-features = false }
libfdisk-sys = "0.1"
nix = "0.21"
